Test/semantic_tests/error13_dot_non_struct.expected
Error type 13 at Line 4: Dot operator on non-struct.
