Test/semantic_tests/error13_dot_non_struct.cmm
int main()
{
    int i;
    i.field = 5;
    return 0;
}
